--- a/config.toml
+++ b/config.toml
@@ -10,11 +10,11 @@ pygmentsUseClasses = true
 theme = "beautifulhugo"
 title = "360Solidaires"
 
+[module.hugoVersion]
+extended = true
+min = "0.143.1"
 
-[Author]
-name = "360Solidaires"
-
-[params]
+[Params]
 comments = false
 commit = true
 dateFormat = "02/01/2006"
@@ -33,6 +33,8 @@ socialShare = false
 subtitle = "Section Syndicale 360Learning"
 useHLJS = false
 wordCount = false
+  [Params.author]
+    name = "360Solidaires"
 
 [privacy]
   [privacy.disqus]
@@ -63,10 +65,10 @@ name = "S'engager"
 weight = 4
 url = "page/s_engager"
 
-#[[menu.main]]
-#name = "Notre Programme"
-#weight = 5
-#url = "page/programme"
+[[menu.main]]
+name = "Notre Programme"
+weight = 5
+url = "page/programme"
 
 #[[menu.main]]
 #name = "F.A.Q."
